Removed two fellows from 'fellows' page, updated workshop speaker role in 'get involved' page, testing fix for spacing issue between cab members in 'story' page

--- a/sources/css/story.css
+++ b/sources/css/story.css
@@ -42,10 +42,9 @@
   color: white;
   padding-top: 2%;
   text-align: center;
-  margin-left: 2%;
-  margin-right: 2%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
-
 
 
 .profileimage {
